--- a/back-devmaterial/package.json
+++ b/back-devmaterial/package.json
@@ -7,6 +7,7 @@
     "start": "node src/index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.0",
     "pg": "^8.11.3",
     "swagger-jsdoc": "^6.2.8",
