--- a/back-devmaterial/package.json
+++ b/back-devmaterial/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.19.0",
     "pg": "^8.11.3",
     "swagger-jsdoc": "^6.2.8",
