--- a/back-devmaterial/.env
+++ b/back-devmaterial/.env
@@ -1,8 +1,10 @@
-# --- Configuration de l'application ---
+# --- App ---
 PORT=3000
-WEBHOOK_URL=https://ton-webhook.url/api/connexion
+WEBHOOK_SUBSCRIBE_URL=http://webhook-service:3000/subscribe  # URL du service webhook
+CALLBACK_URL=http://back-devmaterial:3000/webhook   # URL publique de ton backend
+SECRET=your-secret-key
 
-# --- Configuration de la base de données ---
+# --- DB ---
 DB_USER=devuser
 DB_HOST=db-devmaterial
 DB_NAME=db_devmaterial
