--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,19 @@
 version: "3.8"
 
 services:
+  webhook-service:
+      build: ./webhook
+      container_name: webhook-service
+      ports:
+        - "3001:3000"
+
   db-devmaterial:
     build: ./db-devmaterial
     container_name: db-devmaterial
     ports:
       - "5433:5432"
+    depends_on:
+      - webhook-service
     environment:
       POSTGRES_USER: devuser
       POSTGRES_PASSWORD: devpass
