--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,23 @@
 stages:
   - build
 
-build-node:
-  stage: build
+build:
   image: node:20
+  stage: build
   script:
-    - npm ci
-    - npm run build
+    - echo "Building webhook-service..."
+    - cd webhook
+    - npm ci || npm install
+    - npm run build --if-present
+    - cd ..
+
+    - echo "Building back-devmaterial..."
+    - cd back-devmaterial
+    - npm ci || npm install
+    - npm run build --if-present
+    - cd ..
+
+    - echo "Building front-devmaterial..."
+    - cd front-devmaterial
+    - npm ci || npm install
+    - npm run build --if-present
