--- a/back-wagonlits/package.json
+++ b/back-wagonlits/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "back-devmaterial",
+  "name": "back-wagonlits",
   "version": "1.0.0",
-  "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^4.19.0",
-    "pg": "^8.16.3",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "pg": "^8.12.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   }
