fix docker compose

--- a/back-wagonlits/.env
+++ b/back-wagonlits/.env
@@ -1,6 +1,8 @@
 # --- Configuration de l'application ---
 PORT=3001
-WEBHOOK_URL=https://ton-webhook.url/api/connexion
+WEBHOOK_SUBSCRIBE_URL=http://webhook-service:3000/subscribe  # URL du service webhook
+CALLBACK_URL=http://back-devmaterial:3000/webhook   # URL publique de ton backend
+SECRET=your-secret-key
 
 # --- Configuration de la base de données ---
 DB_USER=devuser
