--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,3 +21,6 @@ build:
     - cd front-devmaterial
     - npm ci || npm install
     - npm run build --if-present
+
+include:
+  - template: Security/SAST.gitlab-ci.yml
