--- a/back-wagonlits/.env
+++ b/back-wagonlits/.env
@@ -1,7 +1,7 @@
 # --- Configuration de l'application ---
 PORT=3001
 WEBHOOK_SUBSCRIBE_URL=http://webhook-service:3000/subscribe  # URL du service webhook
-CALLBACK_URL=http://back-devmaterial:3000/webhook   # URL publique de ton backend
+CALLBACK_URL=http://back-wagonlits:3000/webhook   # URL publique de ton backend
 SECRET=your-secret-key
 
 # --- Configuration de la base de données ---
@@ -10,3 +10,5 @@ DB_HOST=db-wagonlits
 DB_NAME=db_wagonlits
 DB_PASSWORD=wagonpass
 DB_PORT=5432
+
+WEBHOOK_WHO=back-wagonlits
