--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
       build: ./webhook
       container_name: webhook-service
       ports:
-        - "3001:3000"
+        - "3008:3000"
 
   db-devmaterial:
     build: ./db-devmaterial
@@ -55,6 +55,8 @@ services:
     container_name: db-wagonlits
     ports:
       - "5434:5432"
+    depends_on:
+      - webhook-service
     environment:
       POSTGRES_USER: devuser
       POSTGRES_PASSWORD: wagonpass
