--- a/webhook/package.json
+++ b/webhook/package.json
@@ -12,12 +12,14 @@
     "@types/express": "4.17.21",
     "@types/node": "22.5.4",
     "body-parser": "1.20.3",
+    "cors": "^2.8.5",
     "express": "4.20.0",
     "ts-node": "10.9.2",
     "typescript": "5.6.2"
   },
   "devDependencies": {
     "@eslint/js": "9.10.0",
+    "@types/cors": "^2.8.19",
     "@typescript-eslint/eslint-plugin": "8.5.0",
     "@typescript-eslint/parser": "8.5.0",
     "concurrently": "9.0.1",
