--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,33 +2,64 @@ stages:
   - build
   - security
 
-build:
+# ===========================
+#  COMMON BUILD TEMPLATE
+# ===========================
+.default-node-job:
   image: node:20
   stage: build
   script:
-    - echo "Building webhook-service..."
-    - cd webhook
+    - echo "Building $CI_JOB_NAME..."
+    - cd $PROJECT_PATH
     - npm ci || npm install
     - npm run build --if-present
-    - cd ..
+    - echo "Running tests..."
+    - npm test --if-present
+  variables:
+    PROJECT_PATH: ""
 
-    - echo "Building back-devmaterial..."
-    - cd back-devmaterial
-    - npm ci || npm install
-    - npm run build --if-present
-    - cd ..
+# ===========================
+#  INDIVIDUAL BUILDS
+# ===========================
+build_webhook:
+  extends: .default-node-job
+  variables:
+    PROJECT_PATH: "webhook"
 
-    - echo "Building front-devmaterial..."
-    - cd front-devmaterial
-    - npm ci || npm install
-    - npm run build --if-present
+build_back_devmaterial:
+  extends: .default-node-job
+  variables:
+    PROJECT_PATH: "back-devmaterial"
 
+build_front_devmaterial:
+  extends: .default-node-job
+  variables:
+    PROJECT_PATH: "front-devmaterial"
+
+build_back_wagonlits:
+  extends: .default-node-job
+  variables:
+    PROJECT_PATH: "back-wagonlits"
+
+build_front_wagonlits:
+  extends: .default-node-job
+  variables:
+    PROJECT_PATH: "front-wagonlits"
+
+# ===========================
+#  SECURITY (SAST)
+# ===========================
 include:
   - template: Security/SAST.gitlab-ci.yml
 
 sast:
   stage: security
-  needs: ["build"]
+  needs:
+    - build_webhook
+    - build_back_devmaterial
+    - build_front_devmaterial
+    - build_back_wagonlits
+    - build_front_wagonlits
   variables:
     SAST_EXCLUDED_PATHS: "node_modules,dist"
     SAST_ANALYZER_IMAGE_TAG: "latest"
