--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,48 +1,47 @@
 stages:
   - build
   - security
+  - test
 
 # ===========================
-#  COMMON BUILD TEMPLATE
+#  BUILD TEMPLATE
 # ===========================
-.default-node-job:
+.default-node-build:
   image: node:20
   stage: build
   script:
-    - echo "Building $CI_JOB_NAME..."
+    - echo "🚀 Building $CI_JOB_NAME..."
     - cd $PROJECT_PATH
     - npm ci || npm install
     - npm run build --if-present
-    - echo "Running tests..."
-    - npm test --if-present
   variables:
     PROJECT_PATH: ""
 
 # ===========================
-#  INDIVIDUAL BUILDS
+#  BUILD JOBS
 # ===========================
 build_webhook:
-  extends: .default-node-job
+  extends: .default-node-build
   variables:
     PROJECT_PATH: "webhook"
 
 build_back_devmaterial:
-  extends: .default-node-job
+  extends: .default-node-build
   variables:
     PROJECT_PATH: "back-devmaterial"
 
 build_front_devmaterial:
-  extends: .default-node-job
+  extends: .default-node-build
   variables:
     PROJECT_PATH: "front-devmaterial"
 
 build_back_wagonlits:
-  extends: .default-node-job
+  extends: .default-node-build
   variables:
     PROJECT_PATH: "back-wagonlits"
 
 build_front_wagonlits:
-  extends: .default-node-job
+  extends: .default-node-build
   variables:
     PROJECT_PATH: "front-wagonlits"
 
@@ -64,3 +63,45 @@ sast:
     SAST_EXCLUDED_PATHS: "node_modules,dist"
     SAST_ANALYZER_IMAGE_TAG: "latest"
   allow_failure: false
+
+# ===========================
+#  TEST TEMPLATE
+# ===========================
+.default-node-test:
+  image: node:20
+  stage: test
+  script:
+    - echo "🧪 Testing $CI_JOB_NAME..."
+    - cd $PROJECT_PATH
+    - npm ci || npm install
+    - npm test --if-present
+  variables:
+    PROJECT_PATH: ""
+
+# ===========================
+#  TEST JOBS
+# ===========================
+test_webhook:
+  extends: .default-node-test
+  variables:
+    PROJECT_PATH: "webhook"
+
+test_back_devmaterial:
+  extends: .default-node-test
+  variables:
+    PROJECT_PATH: "back-devmaterial"
+
+test_front_devmaterial:
+  extends: .default-node-test
+  variables:
+    PROJECT_PATH: "front-devmaterial"
+
+test_back_wagonlits:
+  extends: .default-node-test
+  variables:
+    PROJECT_PATH: "back-wagonlits"
+
+test_front_wagonlits:
+  extends: .default-node-test
+  variables:
+    PROJECT_PATH: "front-wagonlits"
