--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,107 +1,216 @@
-stages:
-  - build
-  - security
-  - test
+name: CI Pipeline
 
-# ===========================
-#  BUILD TEMPLATE
-# ===========================
-.default-node-build:
-  image: node:20
-  stage: build
-  script:
-    - echo "🚀 Building $CI_JOB_NAME..."
-    - cd $PROJECT_PATH
-    - npm ci || npm install
-    - npm run build --if-present
-  variables:
-    PROJECT_PATH: ""
+on:
+  push:
+  pull_request:
 
-# ===========================
-#  BUILD JOBS
-# ===========================
-build_webhook:
-  extends: .default-node-build
-  variables:
-    PROJECT_PATH: "webhook"
+jobs:
+  # ===========================
+  #  BUILD STAGE
+  # ===========================
+  build_webhook:
+    name: Build Webhook
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./webhook
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+          cache-dependency-path: webhook/package-lock.json
+      - name: Build webhook-service
+        run: |
+          npm ci || npm install
+          npm run build --if-present
 
-build_back_devmaterial:
-  extends: .default-node-build
-  variables:
-    PROJECT_PATH: "back-devmaterial"
+  build_back_devmaterial:
+    name: Build Back DevMaterial
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./back-devmaterial
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+          cache-dependency-path: back-devmaterial/package-lock.json
+      - name: Build back-devmaterial
+        run: |
+          npm ci || npm install
+          npm run build --if-present
 
-build_front_devmaterial:
-  extends: .default-node-build
-  variables:
-    PROJECT_PATH: "front-devmaterial"
+  build_front_devmaterial:
+    name: Build Front DevMaterial
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./front-devmaterial
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+          cache-dependency-path: front-devmaterial/package-lock.json
+      - name: Build front-devmaterial
+        run: |
+          npm ci || npm install
+          npm run build --if-present
 
-build_back_wagonlits:
-  extends: .default-node-build
-  variables:
-    PROJECT_PATH: "back-wagonlits"
+  build_back_wagonlits:
+    name: Build Back Wagonlits
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./back-wagonlits
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+          cache-dependency-path: back-wagonlits/package-lock.json
+      - name: Build back-wagonlits
+        run: |
+          npm ci || npm install
+          npm run build --if-present
 
-build_front_wagonlits:
-  extends: .default-node-build
-  variables:
-    PROJECT_PATH: "front-wagonlits"
+  build_front_wagonlits:
+    name: Build Front Wagonlits
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./front-wagonlits
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+          cache-dependency-path: front-wagonlits/package-lock.json
+      - name: Build front-wagonlits
+        run: |
+          npm ci || npm install
+          npm run build --if-present
 
-# ===========================
-#  SECURITY (SAST)
-# ===========================
-include:
-  - template: Security/SAST.gitlab-ci.yml
+  # ===========================
+  #  SECURITY STAGE (SAST)
+  # ===========================
+  security_sast:
+    name: Security Scan (SAST)
+    runs-on: ubuntu-latest
+    needs:
+      - build_webhook
+      - build_back_devmaterial
+      - build_front_devmaterial
+      - build_back_wagonlits
+      - build_front_wagonlits
+    steps:
+      - uses: actions/checkout@v4
+      - name: Run CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
+        with:
+          category: "/language:javascript"
 
-sast:
-  stage: security
-  needs:
-    - build_webhook
-    - build_back_devmaterial
-    - build_front_devmaterial
-    - build_back_wagonlits
-    - build_front_wagonlits
-  variables:
-    SAST_EXCLUDED_PATHS: "node_modules,dist"
-    SAST_ANALYZER_IMAGE_TAG: "latest"
-  allow_failure: false
+  # ===========================
+  #  TEST STAGE
+  # ===========================
+  test_webhook:
+    name: Test Webhook
+    runs-on: ubuntu-latest
+    needs: security_sast
+    defaults:
+      run:
+        working-directory: ./webhook
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+          cache-dependency-path: webhook/package-lock.json
+      - name: Run tests
+        run: |
+          npm ci || npm install
+          npm test --if-present
 
-# ===========================
-#  TEST TEMPLATE
-# ===========================
-.default-node-test:
-  image: node:20
-  stage: test
-  script:
-    - echo "🧪 Testing $CI_JOB_NAME..."
-    - cd $PROJECT_PATH
-    - npm ci || npm install
-    - npm test --if-present
-  variables:
-    PROJECT_PATH: ""
+  test_back_devmaterial:
+    name: Test Back DevMaterial
+    runs-on: ubuntu-latest
+    needs: security_sast
+    defaults:
+      run:
+        working-directory: ./back-devmaterial
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+          cache-dependency-path: back-devmaterial/package-lock.json
+      - name: Run tests
+        run: |
+          npm ci || npm install
+          npm test --if-present
 
-# ===========================
-#  TEST JOBS
-# ===========================
-test_webhook:
-  extends: .default-node-test
-  variables:
-    PROJECT_PATH: "webhook"
+  test_front_devmaterial:
+    name: Test Front DevMaterial
+    runs-on: ubuntu-latest
+    needs: security_sast
+    defaults:
+      run:
+        working-directory: ./front-devmaterial
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+          cache-dependency-path: front-devmaterial/package-lock.json
+      - name: Run tests
+        run: |
+          npm ci || npm install
+          npm test --if-present
 
-test_back_devmaterial:
-  extends: .default-node-test
-  variables:
-    PROJECT_PATH: "back-devmaterial"
+  test_back_wagonlits:
+    name: Test Back Wagonlits
+    runs-on: ubuntu-latest
+    needs: security_sast
+    defaults:
+      run:
+        working-directory: ./back-wagonlits
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+          cache-dependency-path: back-wagonlits/package-lock.json
+      - name: Run tests
+        run: |
+          npm ci || npm install
+          npm test --if-present
 
-test_front_devmaterial:
-  extends: .default-node-test
-  variables:
-    PROJECT_PATH: "front-devmaterial"
-
-test_back_wagonlits:
-  extends: .default-node-test
-  variables:
-    PROJECT_PATH: "back-wagonlits"
-
-test_front_wagonlits:
-  extends: .default-node-test
-  variables:
-    PROJECT_PATH: "front-wagonlits"
+  test_front_wagonlits:
+    name: Test Front Wagonlits
+    runs-on: ubuntu-latest
+    needs: security_sast
+    defaults:
+      run:
+        working-directory: ./front-wagonlits
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+          cache-dependency-path: front-wagonlits/package-lock.json
+      - name: Run tests
+        run: |
+          npm ci || npm install
+          npm test --if-present
