--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,215 +2,80 @@ name: CI Pipeline
 
 on:
   push:
+    branches: [main]
   pull_request:
 
 jobs:
-  # ===========================
-  #  BUILD STAGE
-  # ===========================
-  build_webhook:
-    name: Build Webhook
+  # ==========================================
+  #  1️⃣ BUILD STAGE
+  # ==========================================
+  build:
+    name: Build ${{ matrix.project }}
     runs-on: ubuntu-latest
+    continue-on-error: true
+    strategy:
+      matrix:
+        project: [webhook, back-devmaterial, front-devmaterial, back-wagonlits, front-wagonlits]
     defaults:
       run:
-        working-directory: ./webhook
+        working-directory: ./${{ matrix.project }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: npm
-          cache-dependency-path: webhook/package-lock.json
-      - name: Build webhook-service
+          cache-dependency-path: ${{ matrix.project }}/package-lock.json
+      - name: Build ${{ matrix.project }}
         run: |
+          echo "🚀 Building ${{ matrix.project }}..."
           npm ci || npm install
           npm run build --if-present
 
-  build_back_devmaterial:
-    name: Build Back DevMaterial
+  # ==========================================
+  #  2️⃣ SECURITY STAGE (SAST / CodeQL)
+  # ==========================================
+  security:
+    name: Security Scan (SAST / CodeQL)
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./back-devmaterial
+    continue-on-error: true
+    needs: [build]
+    permissions:
+      security-events: write
+      actions: read
+      contents: read
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
         with:
-          node-version: 20
-          cache: npm
-          cache-dependency-path: back-devmaterial/package-lock.json
-      - name: Build back-devmaterial
-        run: |
-          npm ci || npm install
-          npm run build --if-present
-
-  build_front_devmaterial:
-    name: Build Front DevMaterial
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./front-devmaterial
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: npm
-          cache-dependency-path: front-devmaterial/package-lock.json
-      - name: Build front-devmaterial
-        run: |
-          npm ci || npm install
-          npm run build --if-present
-
-  build_back_wagonlits:
-    name: Build Back Wagonlits
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./back-wagonlits
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: npm
-          cache-dependency-path: back-wagonlits/package-lock.json
-      - name: Build back-wagonlits
-        run: |
-          npm ci || npm install
-          npm run build --if-present
-
-  build_front_wagonlits:
-    name: Build Front Wagonlits
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./front-wagonlits
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: npm
-          cache-dependency-path: front-wagonlits/package-lock.json
-      - name: Build front-wagonlits
-        run: |
-          npm ci || npm install
-          npm run build --if-present
-
-  # ===========================
-  #  SECURITY STAGE (SAST)
-  # ===========================
-  security_sast:
-    name: Security Scan (SAST)
-    runs-on: ubuntu-latest
-    needs:
-      - build_webhook
-      - build_back_devmaterial
-      - build_front_devmaterial
-      - build_back_wagonlits
-      - build_front_wagonlits
-    steps:
-      - uses: actions/checkout@v4
-      - name: Run CodeQL Analysis
+          languages: javascript
+      - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
-        with:
-          category: "/language:javascript"
 
-  # ===========================
-  #  TEST STAGE
-  # ===========================
-  test_webhook:
-    name: Test Webhook
+  # ==========================================
+  #  3️⃣ TEST STAGE
+  # ==========================================
+  test:
+    name: Test ${{ matrix.project }}
     runs-on: ubuntu-latest
-    needs: security_sast
+    continue-on-error: true
+    needs: [security]
+    strategy:
+      matrix:
+        project: [webhook, back-devmaterial, front-devmaterial, back-wagonlits, front-wagonlits]
     defaults:
       run:
-        working-directory: ./webhook
+        working-directory: ./${{ matrix.project }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: npm
-          cache-dependency-path: webhook/package-lock.json
+          cache-dependency-path: ${{ matrix.project }}/package-lock.json
       - name: Run tests
         run: |
-          npm ci || npm install
-          npm test --if-present
-
-  test_back_devmaterial:
-    name: Test Back DevMaterial
-    runs-on: ubuntu-latest
-    needs: security_sast
-    defaults:
-      run:
-        working-directory: ./back-devmaterial
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: npm
-          cache-dependency-path: back-devmaterial/package-lock.json
-      - name: Run tests
-        run: |
-          npm ci || npm install
-          npm test --if-present
-
-  test_front_devmaterial:
-    name: Test Front DevMaterial
-    runs-on: ubuntu-latest
-    needs: security_sast
-    defaults:
-      run:
-        working-directory: ./front-devmaterial
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: npm
-          cache-dependency-path: front-devmaterial/package-lock.json
-      - name: Run tests
-        run: |
-          npm ci || npm install
-          npm test --if-present
-
-  test_back_wagonlits:
-    name: Test Back Wagonlits
-    runs-on: ubuntu-latest
-    needs: security_sast
-    defaults:
-      run:
-        working-directory: ./back-wagonlits
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: npm
-          cache-dependency-path: back-wagonlits/package-lock.json
-      - name: Run tests
-        run: |
-          npm ci || npm install
-          npm test --if-present
-
-  test_front_wagonlits:
-    name: Test Front Wagonlits
-    runs-on: ubuntu-latest
-    needs: security_sast
-    defaults:
-      run:
-        working-directory: ./front-wagonlits
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: npm
-          cache-dependency-path: front-wagonlits/package-lock.json
-      - name: Run tests
-        run: |
+          echo "🧪 Testing ${{ matrix.project }}..."
           npm ci || npm install
           npm test --if-present
