--- a/back-devmaterial/package.json
+++ b/back-devmaterial/package.json
@@ -4,7 +4,8 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "test": "jest --detectOpenHandles --forceExit"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -13,5 +14,9 @@
     "pg": "^8.16.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^7.1.4"
   }
 }
