--- a/grafana/provisioning/datasources/datasource.yml
+++ b/grafana/provisioning/datasources/datasource.yml
@@ -1,14 +1,14 @@
 apiVersion: 1
 
 datasources:
-  - name: PostgreSQL DevMateriels
+  - name: bdd webhook
     type: postgres
     access: proxy
-    url: db-devmaterial:5432
-    user: devuser
-    database: db_devmaterial
-    isDefault: true
+    url: webhook-db:5432
+    user: webhook
     secureJsonData:
-      password: devpass
+      password: webhook
+    database: webhook_db
+    isDefault: true
     jsonData:
-      sslmode: disable
+      sslmode: "disable"
