--- a/webhook/package.json
+++ b/webhook/package.json
@@ -4,7 +4,7 @@
     "server": "ts-node src/server.ts",
     "client": "ts-node src/client.ts",
     "start": "concurrently \"npm run server\"",
-    "test": "ts-node src/test.ts",
+    "test": "NODE_ENV=test jest --detectOpenHandles --forceExit",
     "update-deps": "npm update",
     "lint": "eslint 'src/**/*.{ts,tsx}'"
   },
@@ -21,12 +21,18 @@
   "devDependencies": {
     "@eslint/js": "9.10.0",
     "@types/cors": "^2.8.19",
+    "@types/jest": "^30.0.0",
     "@types/pg": "^8.15.5",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "8.5.0",
     "@typescript-eslint/parser": "8.5.0",
     "concurrently": "9.0.1",
     "eslint": "9.10.0",
     "globals": "15.9.0",
+    "jest": "^29.7.0",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.5",
+    "typescript": "^5.9.3",
     "typescript-eslint": "8.5.0"
   }
 }
