--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,7 +63,7 @@ jobs:
     needs: [security]
     strategy:
       matrix:
-        project: [webhook,back-devmaterial]
+        project: [webhook,back-devmaterial, back-wagonlits]
         #project: [webhook, back-devmaterial, front-devmaterial, back-wagonlits, front-wagonlits]
     defaults:
       run:
