--- a/back-devmaterial/.env
+++ b/back-devmaterial/.env
@@ -4,6 +4,8 @@ WEBHOOK_SUBSCRIBE_URL=http://webhook-service:3000/subscribe  # URL du service we
 CALLBACK_URL=http://back-devmaterial:3000/webhook   # URL publique de ton backend
 SECRET=your-secret-key
 
+WEBHOOK_POST_URL=http://webhook-service:3000  # URL du service webhook pour les posts
+
 # --- DB ---
 DB_USER=devuser
 DB_HOST=db-devmaterial
