--- a/back-wagonlits/.env
+++ b/back-wagonlits/.env
@@ -1,6 +1,7 @@
 # --- Configuration de l'application ---
 PORT=3001
-WEBHOOK_SUBSCRIBE_URL=http://webhook-service:3000/subscribe  # URL du service webhook
+WEBHOOK_SUBSCRIBE_URL=http://webhook-service:3000/subscribe
+WEBHOOK__URL=http://webhook-service:3000 # URL du service webhook
 CALLBACK_URL=http://back-wagonlits:3000/webhook   # URL publique de ton backend
 SECRET=your-secret-key
 
